improve userExperience App V 1.0.9

--- a/app/src/main/res/layout/activity_compiled_summary.xml
+++ b/app/src/main/res/layout/activity_compiled_summary.xml
@@ -8,10 +8,10 @@
         android:id="@+id/btnDeleteAll"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:padding="16dp"
         android:text="Delete All"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        android:padding="16dp"/>
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recyclerCompiled"
