--- a/app/src/main/res/layout/item_compiled_summary.xml
+++ b/app/src/main/res/layout/item_compiled_summary.xml
@@ -1,15 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
-<com.google.android.material.card.MaterialCardView
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_margin="10dp"
+    app:cardBackgroundColor="@color/white"
     app:cardCornerRadius="16dp"
     app:cardElevation="6dp"
     app:strokeColor="@color/teal_700"
-    app:strokeWidth="2dp"
-    app:cardBackgroundColor="@color/white">
+    app:strokeWidth="2dp">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -21,29 +20,29 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            android:gravity="center_vertical">
+            android:gravity="center_vertical"
+            android:orientation="horizontal">
 
             <TextView
                 android:id="@+id/tvSerial"
                 android:layout_width="36dp"
                 android:layout_height="36dp"
+                android:layout_marginEnd="12dp"
                 android:background="@drawable/serial_circle_bg"
                 android:gravity="center"
                 android:text="1"
-                android:textSize="18sp"
-                android:textStyle="bold"
                 android:textColor="@color/white"
-                android:layout_marginEnd="12dp"/>
+                android:textSize="18sp"
+                android:textStyle="bold" />
 
             <TextView
                 android:id="@+id/tvDate"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="2025-08-07"
-                android:textStyle="bold"
                 android:textColor="@color/black"
-                android:textSize="16sp" />
+                android:textSize="16sp"
+                android:textStyle="bold" />
         </LinearLayout>
 
         <!-- Medicine Name -->
@@ -51,37 +50,98 @@
             android:id="@+id/tvMedicine"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Medicine Name"
-            android:textStyle="bold"
-            android:textSize="15sp"
-            android:textColor="@color/teal_700"
             android:layout_marginTop="6dp"
-            android:layout_marginBottom="8dp" />
+            android:layout_marginBottom="8dp"
+            android:text="Medicine Name"
+            android:textColor="@color/teal_700"
+            android:textSize="15sp"
+            android:textStyle="bold" />
 
         <!-- Table-like layout for summary -->
         <TableLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:stretchColumns="*"
             android:background="#f6f6f6"
+            android:elevation="2dp"
             android:padding="6dp"
-            android:elevation="2dp">
+            android:stretchColumns="*">
 
             <TableRow>
-                <TextView android:text="Opening" android:textStyle="bold" android:textColor="@color/black" android:gravity="center"/>
-                <TextView android:text="Cons." android:textStyle="bold" android:textColor="@color/black" android:gravity="center"/>
-                <TextView android:text="Emerg." android:textStyle="bold" android:textColor="@color/black" android:gravity="center"/>
-                <TextView android:text="Closing" android:textStyle="bold" android:textColor="@color/black" android:gravity="center"/>
-                <TextView android:text="Issued" android:textStyle="bold" android:textColor="@color/black" android:gravity="center"/>
-                <TextView android:text="Stock" android:textStyle="bold" android:textColor="@color/black" android:gravity="center"/>
+
+                <TextView
+                    android:gravity="center"
+                    android:text="Opening"
+                    android:textColor="@color/black"
+                    android:textStyle="bold" />
+
+                <TextView
+                    android:gravity="center"
+                    android:text="Cons."
+                    android:textColor="@color/black"
+                    android:textStyle="bold" />
+
+                <TextView
+                    android:gravity="center"
+                    android:text="Emerg."
+                    android:textColor="@color/black"
+                    android:textStyle="bold" />
+
+                <TextView
+                    android:gravity="center"
+                    android:text="Closing"
+                    android:textColor="@color/black"
+                    android:textStyle="bold" />
+
+                <TextView
+                    android:gravity="center"
+                    android:text="Issued"
+                    android:textColor="@color/black"
+                    android:textStyle="bold" />
+
+                <TextView
+                    android:gravity="center"
+                    android:text="Stock"
+                    android:textColor="@color/black"
+                    android:textStyle="bold" />
             </TableRow>
+
             <TableRow>
-                <TextView android:id="@+id/tvOpening" android:text="0" android:textColor="@color/black" android:gravity="center"/>
-                <TextView android:id="@+id/tvConsumption" android:text="0" android:textColor="@color/black" android:gravity="center"/>
-                <TextView android:id="@+id/tvEmergency" android:text="0" android:textColor="@color/black" android:gravity="center"/>
-                <TextView android:id="@+id/tvClosing" android:text="0" android:textColor="@color/black" android:gravity="center"/>
-                <TextView android:id="@+id/tvStoreIssued" android:text="0" android:textColor="@color/black" android:gravity="center"/>
-                <TextView android:id="@+id/tvStockAvailable" android:text="0" android:textColor="@color/black" android:gravity="center"/>
+
+                <TextView
+                    android:id="@+id/tvOpening"
+                    android:gravity="center"
+                    android:text="0"
+                    android:textColor="@color/black" />
+
+                <TextView
+                    android:id="@+id/tvConsumption"
+                    android:gravity="center"
+                    android:text="0"
+                    android:textColor="@color/black" />
+
+                <TextView
+                    android:id="@+id/tvEmergency"
+                    android:gravity="center"
+                    android:text="0"
+                    android:textColor="@color/black" />
+
+                <TextView
+                    android:id="@+id/tvClosing"
+                    android:gravity="center"
+                    android:text="0"
+                    android:textColor="@color/black" />
+
+                <TextView
+                    android:id="@+id/tvStoreIssued"
+                    android:gravity="center"
+                    android:text="0"
+                    android:textColor="@color/black" />
+
+                <TextView
+                    android:id="@+id/tvStockAvailable"
+                    android:gravity="center"
+                    android:text="0"
+                    android:textColor="@color/black" />
             </TableRow>
         </TableLayout>
 
@@ -90,11 +150,11 @@
             android:id="@+id/btnDelete"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Delete"
+            android:layout_gravity="start"
             android:layout_marginTop="10dp"
             android:backgroundTint="@color/holo_blue_light"
-            android:textColor="@color/white"
-            android:layout_gravity="end" />
+            android:text="Delete"
+            android:textColor="@color/white" />
 
     </LinearLayout>
 </com.google.android.material.card.MaterialCardView>
