--- a/app/src/main/res/layout/dialog_edit_summary_item.xml
+++ b/app/src/main/res/layout/dialog_edit_summary_item.xml
@@ -6,27 +6,24 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
 
-    <TextView android:id="@+id/tvVehicle"
+    <!-- Read-only info -->
+    <TextView
+        android:id="@+id/tvVehicle"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Vehicle" />
+        android:text="Vehicle"
+        android:textStyle="bold"
+        android:textSize="14sp" />
 
-    <TextView android:id="@+id/tvMedicine"
+    <TextView
+        android:id="@+id/tvMedicine"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Medicine" />
+        android:text="Medicine"
+        android:textSize="14sp"
+        android:layout_marginBottom="12dp" />
 
-    <com.google.android.material.textfield.TextInputLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:hint="Opening Balance">
-        <com.google.android.material.textfield.TextInputEditText
-            android:id="@+id/editOpening"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:inputType="numberDecimal" />
-    </com.google.android.material.textfield.TextInputLayout>
-
+    <!-- Editable: Consumption -->
     <com.google.android.material.textfield.TextInputLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -38,34 +35,14 @@
             android:inputType="numberDecimal" />
     </com.google.android.material.textfield.TextInputLayout>
 
+    <!-- Editable: Total Emergency -->
     <com.google.android.material.textfield.TextInputLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:hint="Emergency">
+        android:layout_marginTop="8dp"
+        android:hint="Total Emergency">
         <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/editEmergency"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:inputType="numberDecimal" />
-    </com.google.android.material.textfield.TextInputLayout>
-
-    <com.google.android.material.textfield.TextInputLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:hint="Closing Balance">
-        <com.google.android.material.textfield.TextInputEditText
-            android:id="@+id/editClosing"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:inputType="numberDecimal" />
-    </com.google.android.material.textfield.TextInputLayout>
-
-    <com.google.android.material.textfield.TextInputLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:hint="Store Issued">
-        <com.google.android.material.textfield.TextInputEditText
-            android:id="@+id/editStoreIssued"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:inputType="numberDecimal" />
@@ -75,5 +52,6 @@
         android:id="@+id/btnSave"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Save Changes" />
+        android:text="Save Changes"
+        android:layout_marginTop="16dp" />
 </LinearLayout>
