AddDownloadSheet And ResetVehicle App V 1.0.12

--- a/app/src/main/res/layout/activity_form.xml
+++ b/app/src/main/res/layout/activity_form.xml
@@ -240,6 +240,12 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="8dp"
             android:text="Medicine Send To Monthly Sheet" />
+        <Button
+            android:id="@+id/btn_reset_vehicle"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="8dp"
+            android:text="Reset Vehicle" />
     </LinearLayout>
 
 </RelativeLayout>
