--- a/app/src/main/res/layout/activity_summary.xml
+++ b/app/src/main/res/layout/activity_summary.xml
@@ -39,6 +39,13 @@
                 android:text="SSK File" />
 
             <Button
+                android:id="@+id/btnDownloadCsv"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="3dp"
+                android:text="Download Sheet" />
+
+            <Button
                 android:id="@+id/btnMonthlyConsumption"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
